Adding bootrap_archive-keys to establish secure trust-chain on top of debian-keyring for derivatives.

--- a/debian/control
+++ b/debian/control
@@ -16,8 +16,8 @@ Recommends:
  live-boot-doc, live-config-doc, live-manual-html | live-manual, cpio,
  gnu-fdisk
 Suggests:
- dosfstools, xorriso, git, loadlin, memtest86+ | memtest86, mtools, parted,
- squashfs-tools | mtd-tools, sudo | fakeroot, syslinux | grub,
+ dosfstools, debian-keyring, xorriso, git, gpgv, loadlin, memtest86+ | memtest86,
+ mtools, parted, squashfs-tools | mtd-tools, sudo | fakeroot, syslinux | grub,
  uuid-runtime, win32-loader
 Description: Live System Build Scripts
  live-build contains the scripts that build a live system from a configuration
