Correcting wrong debian-installer syslinux menu files.

--- a/share/bootloaders/extlinux/install.cfg
+++ b/share/bootloaders/extlinux/install.cfg
@@ -1,9 +1,12 @@
+label install
+	menu label ^Install
+	menu default
+	linux /install/vmlinuz
+	initrd /install/initrd.gz
+	append vga=788 @APPEND_INSTALL@ -- quiet
+
 label installgui
 	menu label ^Graphical install
-	kernel /install/gtk/vmlinuz
-	append video=vesa:ywrap,mtrr vga=788 initrd=/install/gtk/initrd.gz @LB_BOOTAPPEND_INSTALL@ -- quiet
-
-label install
-	menu label ^Text-mode install
-	kernel /install/vmlinuz
-	append vga=788 initrd=/install/initrd.gz @LB_BOOTAPPEND_INSTALL@ -- quiet
+	linux /install/gtk/vmlinuz
+	initrd /install/gtk/initrd.gz
+	append video=vesa:ywrap,mtrr vga=788 @APPEND_INSTALL@ -- quiet
