--- a/share/bootloaders/syslinux/menu.cfg
+++ b/share/bootloaders/syslinux/menu.cfg
@@ -5,6 +5,13 @@ menu title Boot menu
 include stdmenu.cfg
 include live.cfg
 include install.cfg
+menu begin advanced
+	menu title Advanced options
+	include stdmenu.cfg
+	label mainmenu
+		menu label ^Back..
+		menu exit
+	include advanced.cfg
 menu end
 
 menu clear
