Adding key-shortcut for advanced options in syslinux menu.

--- a/share/bootloaders/syslinux/menu.cfg
+++ b/share/bootloaders/syslinux/menu.cfg
@@ -6,7 +6,7 @@ include stdmenu.cfg
 include live.cfg
 include install.cfg
 menu begin advanced
-	menu title Advanced options
+	menu title ^Advanced options
 	include stdmenu.cfg
 	label mainmenu
 		menu label ^Back..
