Correcting typo in grub2 config template.

--- a/templates/grub2/grub.cfg
+++ b/templates/grub2/grub.cfg
@@ -1,7 +1,7 @@
 set default=0
 
 insmod tga
-background_image ($root)/boot/grub/xbmc.tga
+background_image ($root)/boot/grub/splash.tga
 set color_normal=cyan/blue
 set color_highlight=white/blue
 
