--- a/manpages/Makefile
+++ b/manpages/Makefile
@@ -47,7 +47,7 @@ build: check po4a.cfg
 		exit 1; \
 	fi
 
-	po4a --keep 0 --package-name live-build --package-version $(shell cat ../VERSION) po4a.cfg
+	po4a --copyright-holder "Live Systems Project" --keep 0 --package-name live-build --package-version $(shell cat ../VERSION) po4a.cfg
 
 clean:
 	rm -f po/*/*.po~
