--- a/manpages/po4a.cfg
+++ b/manpages/po4a.cfg
@@ -1,4 +1,4 @@
-[po4a_langs] ja
+[po4a_langs] fr ja
 [po4a_paths] pot/$master.pot $lang:po/$lang/$master.po
 [type: man] en/lb.1 $lang:$lang/lb.$lang.1
 [type: man] en/lb_binary.1 $lang:$lang/lb_binary.$lang.1
