--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Daniel Baumann <mail@daniel-baumann.ch>
 Build-Depends:
  debhelper (>= 9),
 Standards-Version: 3.9.6
-Homepage: http://live-systems.org/devel/live-build/
+Homepage: http://open-infrastructure.net/system-build
 Vcs-Browser: http://live-systems.org/gitweb/?p=live-build.git
 Vcs-Git: git://live-systems.org/git/live-build.git
 
