--- a/debian/control
+++ b/debian/control
@@ -22,9 +22,6 @@ Recommends:
 Suggests:
  debian-keyring,
  gpgv,
-Description: Live System Build Components
- The Live Systems project maintains the components to build Debian based Live
- systems and the official Debian Live images themselves.
- .
- live-build contains the components to build a live system from a configuration
- directory.
+Description: System Image Build Tool
+ system-build is a tool to build system images such as a live system from a
+ configuration directory.
