Adding conflicts and replaces to live-build.
Signed-off-by: Daniel Baumann <mail@daniel-baumann.ch>

--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,10 @@ Recommends:
 Suggests:
  debian-keyring,
  gpgv,
+Conflicts:
+ live-build,
+Replaces:
+ live-build,
 Description: System Image Build Tool
  system-build is a tool to build system images such as a live system from a
  configuration directory.
