--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,8 @@ Build-Depends:
  debhelper (>= 9.20160402~),
 Standards-Version: 3.9.8
 Homepage: https://open-infrastructure.net/software/system-build
-Vcs-Browser: https://github.com/daniel-baumann/open-infrastructure-system-build
-Vcs-Git: https://github.com/daniel-baumann/open-infrastructure-system-build
+Vcs-Browser: https://sources.progress-linux.org/users/daniel/debian/packages/open-infrastructure-system-build
+Vcs-Git: https://sources.progress-linux.org/users/daniel/debian/packages/open-infrastructure-system-build
 
 Package: open-infrastructure-system-build
 Architecture: all
