--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Replaces: live-helper
 Recommends: cpio, gnu-fdisk
 Suggests:
  dosfstools, genisoimage, memtest86+ | memtest86, mtools, parted,
- squashfs-tools | genext2fs | mtd-tools, sudo | fakeroot, syslinux | grub,
+ squashfs-tools-ng | genext2fs | mtd-tools, sudo | fakeroot, syslinux | grub,
  uuid-runtime, win32-loader
 Description: Debian Live - System Build Scripts
  live-build contains the scripts that build a Debian Live system image from a
